--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,13 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
+            <!-- Hutool Java工具类库 -->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.5.7</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
